# 2.0PhysiSim

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  docker-compose.yml  imgui.ini
docker/: entrypoint.sh
docs/: ARCHITECTURE.md  LEARNINGS_AND_PITFALLS.md  WINDOWS_SETUP.md
scripts/: Ensure-CMakeOnPath.ps1  Run-PhysiSim.ps1
shaders/: mesh.frag  mesh.vert
shaders/fea/: laplacian_smooth.comp
src/: main.cpp
src/ai/: AIOrchestrator.cpp  AIOrchestrator.h  AnalysisClient.cpp  AnalysisClient.h  CommandValidator.cpp  CommandValidator.h  LLMClient.cpp  LLMClient.h  MathClient.cpp  MathClient.h  OptimizerCommands.cpp  OptimizerCommands.h
src/analysis/: AnalysisMemory.cpp  AnalysisMemory.h  DefectDetector.cpp  DefectDetector.h  FeedbackBuilder.cpp  FeedbackBuilder.h  GeometryAnalyzer.cpp  GeometryAnalyzer.h  GroundTruth.cpp  GroundTruth.h  HeuristicAnalyzer.cpp  HeuristicAnalyzer.h  MeshBenchmark.cpp  MeshBenchmark.h  MeshHighlightMerge.cpp  MeshHighlightMerge.h  MeshMetrics.cpp  MeshMetrics.h  SimulationInsightPack.cpp  SimulationInsightPack.h  TriangleWeakness.h  WeaknessField.cpp  WeaknessField.h
src/client/: ClientApp.cpp  ClientApp.h  main.cpp
src/core/: Application.cpp  Application.h  CommandSystem.cpp  CommandSystem.h  Scene.cpp  Scene.h
src/fea/: GpuLaplacianSmooth.cpp  GpuLaplacianSmooth.h  MeshAdjacency.cpp  MeshAdjacency.h
src/fem/: FemCompare.cpp  FemCompare.h  FemMeshReadiness.cpp  FemMeshReadiness.h  FemTypes.h  TetrahedralMesh.cpp  TetrahedralMesh.h
src/fem/calculix/: CalculixInputWriter.cpp  CalculixInputWriter.h  CalculixOutputParser.cpp  CalculixOutputParser.h  CalculixRunner.cpp  CalculixRunner.h  FemCalculix.cpp  FemCalculix.h
src/geometry/: GeometryEngine.cpp  GeometryEngine.h  Mesh.cpp  Mesh.h  MeshOperations.cpp  MeshOperations.h
src/ipc/: CommandApiServer.cpp  CommandApiServer.h
src/platform/: FileDialog.cpp  FileDialog.h
src/rendering/: Camera.cpp  Camera.h  MeshVizPost.cpp  MeshVizPost.h  RayPick.cpp  RayPick.h  VulkanDevice.cpp  VulkanDevice.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderer.cpp  VulkanRenderer.h
src/sim/: Constraints.cpp  Constraints.h  MassSpringSystem.cpp  MassSpringSystem.h  SimMaterial.h  SimulationScenario.cpp  SimulationScenario.h
src/ui/: ImGuiLayer.cpp  ImGuiLayer.h  UiTheme.cpp  UiTheme.h
